Bug #19874: SHOW COLUMNS and SHOW KEYS handle identifiers containing \ incorrectly

Identifiers with embedded escape characters were not handled correctly by
  some SHOW statements due to some old code that was doing some extra unescaping.